# turtlebot4_ws

./: .gitignore  .rmf_schedule_node.yaml  COMMANDS.md  SIMULATION_GUIDE.md  TB4_FREE_FLEET_REAL_ROBOT_COMMANDS.md  TB4_FREE_FLEET_REAL_ROBOT_TROUBLESHOOTING.md  frames_2026-04-27_19.00.59.gv  frames_2026-04-27_19.03.42.gv  frames_2026-05-20_14.28.43.gv  mapper_params_online_async.yaml
config/fastdds/: robot2_pc_wlp3s0.xml
config/slam/: robot2_slam.yaml
install/: local_setup.sh  setup.sh
install/tb4_square/lib/tb4_square/: odom_path_publisher  square_driver
install_tb4_square/: local_setup.sh  setup.sh
log/: latest_build
scripts/: robot2_env.bash  robot2_rviz.sh  robot2_slam.sh  robot2_square.sh  robot2_status.sh  robot_controller.py
src/tb4_square/: package.xml  setup.cfg  setup.py
src/tb4_square/behavior_trees/: navigate_through_poses_no_recovery.xml  navigate_to_pose_no_recovery.xml
src/tb4_square/gui/: turtlebot4_sim.gui.config
src/tb4_square/launch/: robot2_localization_compat.launch.py  robot2_nav2_compat.launch.py  robot2_rviz.launch.py  robot2_slam.launch.py  square_driver.launch.py  turtlebot4_sim.launch.py  turtlebot4_sim_ignition.launch.py  turtlebot4_sim_spawn.launch.py
src/tb4_square/rviz/: robot2.rviz  robot2_slam.rviz  turtlebot4_sim.rviz
src/tb4_square/tb4_square/: __init__.py  lifecycle_bringup_retry.py  odom_path_publisher.py  odom_tf_publisher.py  ros_tf_to_zenoh.py  ros_topics_to_zenoh.py  square_driver.py  tf_filter_republisher.py  tf_stable_republisher.py  tf_topic_relay.py  wheel_tf_publisher.py
(+8 files in other folders)
