<?xml version="1.0"?>
<package format="3">
  <name>tb4_square</name>
  <version>0.0.1</version>
  <description>Simple square motion demo for TurtleBot 4.</description>
  <maintainer email="masu_ubu@example.com">masu_ubu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
